--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+You can add global styles to this file, and also import other style files
 body {
     font-size: 18px;
     line-height: 1.58;
@@ -157,3 +157,6 @@ body {
   li.completed i {
     color: #757575;
   }
+
+  @import '~bootstrap/dist/css/bootstrap.min.css';
+  @import '~open-iconic/font/css/open-iconic-bootstrap.css';
