--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -23,37 +23,14 @@
           [(ngModel)]="newTodo.price" #address="ngModel" ng-pattern="/^[0-9]+(\.[0-9]{1,2})?$/" step="0.01" > 
       </div>
 
- 
+     
 
       <div class="form-group">
           <label for="eventDate">Event date: </label>
-          <input type="date" id="eventDate" class="form-control" placeholder="yyyy-MM-dd" required name="eventDate"
+          <input type="datetime-local" id="eventDate" class="form-control" placeholder="yyyy-MM-ddTHH:mm:ss" required name="eventDate"
           [(ngModel)]="newTodo.eventDate" #eventDate="ngModel" min="2018-01-01" max="2028-12-31"> 
-
       </div>
 
-      <!-- <div class="form-group">
-          <label for="startTime">Start time: </label>
-          <input type="time" id="startTime" class="form-control" placeholder="HH:mm:ss" required name="startTime"
-          [(ngModel)]="newTodo.startTime" #startTime="ngModel"> 
-          <div *ngIf="startTime.errors && startTime.dirty" class="alert alert-danger">
-              <div [hidden]="!startTime.errors.required">
-                  startTime is required.
-              </div>
-            </div>
-
-      </div> -->
-<!-- 
-      <div class="form-group">
-          <label for="endTime">End time: </label>
-          <input type="time" id="endTime" class="form-control" placeholder="HH:mm:ss" required name="endTime"
-          [(ngModel)]="newTodo.endTime" #endTime="ngModel"> 
-          <div *ngIf="endTime.errors && endTime.dirty" class="alert alert-danger">
-              <div [hidden]="!endTime.errors.required">
-                  endTime is required.
-              </div>
-            </div>
-      </div> -->
 
       <div class="form-group">
           <label for="address">Address: </label>
@@ -98,12 +75,12 @@
               </div>
           </div>
         </div>
-
-
       
       <button type="submit" class="btn btn-success">Submit</button>
     </form>
   </div>
+
+
 
 
 
@@ -120,12 +97,7 @@
         </span>
         <br>
         <span class="todo-eventDate">
-            eventDate: {{todo.eventDate | date:"yyyy-MM-dd"}}
-        </span>
-        <br>
-        <span class="todo-time">
-            time: {{todo.startTime | date:"HH:mm:ss"}} 
-            ~ {{todo.endTime | date:"HH:mm:ss"}} 
+            eventDate: {{todo.eventDate | date:"yyyy-MM-dd HH:mm:ss"}}
         </span>
         <br> 
         <span class="todo-price">
