seperated and beatified

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<main>
+<!-- <main>
+  <app-admin-front></app-admin-front>
   <app-todo-list></app-todo-list>
-</main>
+</main> -->
+
+<router-outlet></router-outlet>
