--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
-You can add global styles to this file, and also import other style files
+
+@import "~bootstrap/dist/css/bootstrap.css";
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~open-iconic/font/css/open-iconic-bootstrap.css';
 body {
     font-size: 18px;
     line-height: 1.58;
@@ -30,8 +33,9 @@ body {
   }
   
   .todo-content {
-    max-width: 650px;
+    max-width: 1000px;
     width: 100%;
+    height:100%;
     margin: 0 auto;
     margin-top: 60px;
     background-color: #fff;
@@ -158,5 +162,4 @@ body {
     color: #757575;
   }
 
-  @import '~bootstrap/dist/css/bootstrap.min.css';
-  @import '~open-iconic/font/css/open-iconic-bootstrap.css';
+  
